# device_board_openvalley

./: BUILD.gn  EULA  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  OAT.xml  README.en.md  README.md  README_zh.md
niobeu4/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  README_zh.md  ohos.build
niobeu4/liteos_m/: BUILD.gn  config.gni
niobeu4/liteos_m/arch/: BUILD.gn  los_arch_atomic.h  los_arch_context.h  los_arch_interrupt.h  los_arch_regs.h  los_context.c  los_interrupt.c
niobeu4/liteos_m/drivers/: BUILD.gn
niobeu4/liteos_m/drivers/adc/: BUILD.gn  adc.c  adc.h
niobeu4/liteos_m/drivers/gpio/: BUILD.gn  gpio.c  gpio.h
niobeu4/liteos_m/drivers/i2c/: BUILD.gn  i2c.c  i2c.h
niobeu4/liteos_m/drivers/osal/: BUILD.gn  osal.c
niobeu4/liteos_m/drivers/uart/: BUILD.gn  uart.c
niobeu4/liteos_m/drivers/watchdog/: BUILD.gn  watchdog.c
niobeu4/liteos_m/drivers/wifi/: BUILD.gn  wifi.h  wifi_sta.c
niobeu4/liteos_m/hals/: BUILD.gn
niobeu4/liteos_m/hals/driver/: hal_watchdog.c  hm_sys.c
niobeu4/liteos_m/hals/driver/bluetooth_lite/: BUILD.gn  blegap.h  bluetooth_device.c  bluetooth_device.h
niobeu4/liteos_m/hals/driver/wifi_lite/: BUILD.gn  wifi_device.c
niobeu4/liteos_m/hals/drivers/: BUILD.gn
niobeu4/liteos_m/hals/drivers/bluetooth_lite/: BUILD.gn  blegap.h  bluetooth_device.c  bluetooth_device.h  bluetooth_service.c  bluetooth_service.h
niobeu4/liteos_m/hals/drivers/wifi_lite/: BUILD.gn  esp_wifi_wpa.c  wifi_device.c
niobeu4/liteos_m/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_i2c.c  hal_iot_pwm.c  hal_iot_uart.c  hal_iot_watchdog.c  hal_lowpower.c  hal_reset.c
niobeu4/liteos_m/hals/libc/: log.c  syscalls.c
niobeu4/liteos_m/hals/log/: BUILD.gn
niobeu4/liteos_m/hals/mbedtls/: BUILD.gn  mbedtls.c
niobeu4/liteos_m/hals/memory/: BUILD.gn  ohos_mem_pool.c
niobeu4/liteos_m/hals/syscalls/: BUILD.gn
niobeu4/liteos_m/hals/update/: BUILD.gn  update_adapter.c
niobeu4/liteos_m/hals/utils/file/: BUILD.gn  hal_file.c
niobeu4/liteos_m/hdf_config/: BUILD.gn  device_info.hcs  hdf.hcs
niobeu4/liteos_m/hdf_drivers/: BUILD.gn
niobeu4/liteos_m/hdf_drivers/gpio/: BUILD.gn  gpio_esp32u4.c
niobeu4/liteos_m/hdf_drivers/i2c/: BUILD.gn  i2c_esp32u4.c
niobeu4/liteos_m/hdf_drivers/pwm/: BUILD.gn  pwm_esp32u4.c
niobeu4/liteos_m/hdf_drivers/spi/: BUILD.gn  spi_esp32u4.c
niobeu4/liteos_m/hdf_drivers/uart/: BUILD.gn  uart_esp32u4.c
niobeu4/liteos_m/hdf_drivers/watchdog/: BUILD.gn  watchdog_esp32u4.c
niobeu4/liteos_m/include/: ohos_run.h  target_config.h
niobeu4/liteos_m/littlefs/: BUILD.gn  littlefs.c  littlefs.h  littlefs_ram.c
niobeu4/liteos_m/third_party_adapter/: BUILD.gn
niobeu4/liteos_m/third_party_adapter/littlefs/: BUILD.gn  littlefs.c  littlefs.h  littlefs_ram.c
niobeu4/liteos_m/third_party_adapter/lwip/: BUILD.gn
niobeu4/liteos_m/third_party_adapter/lwip-2.1/: BUILD.gn
niobeu4/liteos_m/third_party_adapter/lwip-2.1/include/lwip/: lwipopts.h
niobeu4/liteos_m/third_party_adapter/mbedtls/: BUILD.gn
niobeu4/liteos_m/third_party_adapter/mbedtls/include/mbedtls/: config.h
