# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

board = "esp32u4"
board_cpu = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "xtensa-esp32-elf-gcc"

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "xtensa-esp32-elf-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
  "-mlongcalls",
  "-O2",
  "-Wall",
  "-Wextra",
  "-fno-common",
  "-Wdouble-promotion",
  "-mtext-section-literals",
  "-DESP32",
  "-Wno-implicit-function-declaration",
  "-Wno-sign-conversion",
  "-Wno-sign-compare",
  "-W",
  "-Wshadow",
  "-ffunction-sections",
  "-fdata-sections",
  "-Wno-conversion",
  "-Wno-unused-parameter",
  "-Wno-unused-variable",
  "-Wno-type-limits",
  "-Wno-cast-function-type",
  "-Wno-implicit-fallthrough",
  "-Wno-parentheses",
  "-Wno-pointer-sign",
]

board_cxx_flags = board_cflags

board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
  "//commonlibrary/utils_lite/include",
  "//device/soc/esp/esp32/components/osal/include",
  "//device/soc/esp/esp32/components/osal/port/xtensa/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/board/openvalley/niobeu4/liteos_m"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
