# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (ohos_kernel_type == "liteos_m") {
  import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")
  macro_switch = defined(LOSCFG_DRIVERS_HDF_CONFIG_MACRO)
  module_name = get_path_info(rebase_path("."), "name")
  config("public") {
    include_dirs = [ "$target_gen_dir" ]
    include_dirs += [
      "//device/soc/esp/esp32/components/hal/include/hal",
      "//device/soc/esp/esp32/components/driver/include",
      "//device/soc/esp/esp32/components/esp_ringbuf/include",
    ]
  }
  hdf_driver(module_name) {
    hcs_sources = [ "hdf.hcs" ]
    special_visibility = [ "//device/board/$device_company/$device_name/liteos_m/*" ]
  }
}
