# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_switch = true
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "bluetooth_device.c",
  ]

  ESP_SDK_PATH="//device/soc/esp/esp32/components/"
  include_dirs = [
    ESP_SDK_PATH+"bt/include/esp32/include",
    "//foundation/communication/bluetooth/interfaces/inner_api/include/c_header",
    ESP_SDK_PATH+"bt/host/bluedroid/api/include/api",
    ESP_SDK_PATH+"log/include",
  ]
}

config("public") {
  include_dirs = ["."]
}
