# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_switch = true
# defined(LOSCFG_DRIVERS_HDF_PLATFORM_WIFI)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "wifi_device.c",
  ]
  deps = [ "//foundation/communication/wifi_lite:wifi" ]

  # include_dirs = [ "//kernel/liteos_m/components/net/lwip-2.1/porting/include" ]
  # include_dirs += [ "//third_party/lwip/src/include" ]
  ESP_SDK_PATH="//device/soc/esp/esp32/components/"
  include_dirs = [
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    ESP_SDK_PATH+"esp_wifi/include",
    ESP_SDK_PATH+"esp_event/include",
    ESP_SDK_PATH+"esp_netif/include",
    ESP_SDK_PATH+"esp_eth/include",
    ESP_SDK_PATH+"tcpip_adapter/include",
    ESP_SDK_PATH+"lwip/include/apps",
    ESP_SDK_PATH+"lwip",
    ESP_SDK_PATH+"lwip/lwip/src/include",
    ESP_SDK_PATH+"lwip/port/esp32/include",
  #   "//device/soc/esp/esp32/components/lwip/include/apps",
  #   "//device/soc/esp/esp32/components/lwip/include/apps/sntp",
  #   "//device/soc/esp/esp32/components/lwip/lwip/src/include",
  #   "//device/soc/esp/esp32/components/lwip/port/esp32/include",
  #   "//device/soc/esp/esp32/components/lwip/port/esp32/include/arch",
  #   "//device/soc/esp/esp32/components/esp_common/include",
  #   "//device/soc/esp/esp32/components",
  #   "//device/soc/esp/esp32/components/freertos/include",
  #   "//device/soc/esp/esp32/components/freertos/port/xtensa/include",
  #   "//device/soc/esp/esp32/components/xtensa/include",
  #   "//device/soc/esp/esp32/components/xtensa/esp32/include",
  #   "//device/soc/esp/esp32/components/esp_rom/include",
  #   "//device/soc/esp/esp32/components/spi_flash/sim/stubs/esp_timer/include",
  #   "//device/soc/esp/esp32/components/esp_system/include",
  #   "//device/soc/esp/esp32/components/newlib/platform_include",
  #   "//device/soc/esp/esp32/components/esp_hw_support/include",
  #   "//device/soc/esp/esp32/components/hal/include",
  #   "//device/soc/esp/esp32/components/soc/esp32/include",
  #   "//device/soc/esp/esp32/components/hal/esp32/include",
  #   "//device/soc/esp/esp32/components/soc/include",
  #   "//device/soc/esp/esp32/components/heap/include",
  ]
}
