# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_switch = defined(LOSCFG_NET_LWIP)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "wifi_device.c",
    "esp_wifi_wpa.c",
  ]
  deps = [ "//foundation/communication/wifi_lite:wifi" ]

  ESP_SDK_PATH="//device/soc/esp/esp32/components/"
  include_dirs = [
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    ESP_SDK_PATH+"esp_wifi/include",
    ESP_SDK_PATH+"esp_event/include",
    ESP_SDK_PATH+"esp_netif/include",
    ESP_SDK_PATH+"tcpip_adapter/include",
    ESP_SDK_PATH+"esp_lwip/include/apps",
  ]
}
