# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

lite_library("hal_iothardware") {
  target_type = "static_library"
  sources = [
    "hal_iot_flash.c",
    "hal_iot_gpio.c",
    "hal_iot_i2c.c",
    "hal_iot_pwm.c",
    "hal_iot_uart.c",
    "hal_iot_watchdog.c",
    "hal_lowpower.c",
    "hal_reset.c",
  ]
  include_dirs = [
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/esp/esp32/components/esp_ringbuf/include",
  ]
}
